--- a/Day01-W2/Hoàng Trung/HelloWorld/src/app/app.component.html
+++ b/Day01-W2/Hoàng Trung/HelloWorld/src/app/app.component.html
@@ -3,7 +3,7 @@
     <a href="" style="font-size:250%;">Home</a>
     <a href="" id="nav">Home</a>
     <a href="" id="nav">Home</a>
-    <img style="margin-left: 60%;" src="../assets/avatar.jpg" alt="Avatar">
+    <img style="margin-left: 60%;" src="" alt="Avatar">
   </div>
   <div style="z-index: -1;">
     <div style="width:100%;height: 1000px; display: flex; flex-direction: row;">
